fix spacing issue on form

--- a/frontend/src/styles/Homepage.scss
+++ b/frontend/src/styles/Homepage.scss
@@ -34,7 +34,7 @@ $color-button-text: #FFF1ED;
       border: none;
       border-radius: 8px;
       margin-bottom: 10px;
-      width: 100%;
+      width: 360px;
     }
   }
   
